syntax = "proto3";

package realtimeaggregator;


message UnittestFeed {
    int64 time = 1;
}

message ExceptionLog {
    string name = 1;
    string text = 2;
    string traceback = 3;
}

message FeedData {
    string feed_url = 1;
    string feed_id = 2;
    string feed_ext = 3;
    string feed_func_name = 4;
}

message DownloadTaskLog {
    int32 start_time = 1;
    int32 end_time = 2;
    float frequency = 10;
    float duration = 11;
    string working_directory = 12;
    ExceptionLog terminating_exception = 13;
    repeated string target_directories = 14;

    repeated FeedData feeds = 3;

    message DownloadCycleLog {
        int32 start_time = 1;
        repeated bool downloaded = 2;
        repeated ExceptionLog exceptions = 3;
    }

    repeated DownloadCycleLog download_cycles = 5;

    int32 num_cycles = 6;
    repeated int32 num_downloaded = 7;

}

message FilterTaskLog {

    int32 start_time = 1;
    int32 end_time = 90;
    int32 limit = 2;
    int32 file_access_lag = 91;
    string working_directory = 12;
    repeated string source_directories = 13;
    repeated string target_directories = 14;

    repeated FeedData feeds = 3;



    repeated int32 num_copied = 5;
    repeated int32 num_duplicate = 6;
    repeated int32 num_corrupt = 7;

    repeated int32 scheduled_compressions = 20;
    bool limit_reached = 19;
    ExceptionLog terminating_exception = 18;

}

message CompressTaskLog {

    int32 start_time = 1;
    int32 end_time = 90;
    int32 limit = 2;
    bool compress_all = 70;
    int32 file_access_lag = 91;
    string working_directory = 12;

    repeated FeedData feeds = 3;

    message CompressedHour {
        int32 hour = 1;
        repeated int32 num_compressed = 2;
        repeated string md5_hash = 3;
        repeated string source_directories = 4;
        repeated string target_file_names = 7;
        repeated bool appended = 6;
        string target_directory = 5;
    }

    repeated CompressedHour compressed_hours = 4;

    bool limit_reached = 19;
    ExceptionLog terminating_exception = 18;

}




message ArchiveTaskLog {

    int32 start_time = 1;
    int32 end_time = 90;
    int32 limit = 2;
    int32 file_access_lag = 91;
    string working_directory = 12;

    repeated FeedData feeds = 3;

    message UploadLog {
        string feed_id = 4;
        string preexisting_md5_hash = 7;
        string md5_hash = 3;
        string source_file_path = 2;
        string target_key = 5;
        bool success = 6;
        ExceptionLog upload_error = 1;
        ExceptionLog download_error = 10;
    }

    repeated UploadLog uploads = 4;

    bool limit_reached = 19;
    ExceptionLog terminating_exception = 18;

}




